Added all parity from Java repo