@@ -2,6 +2,8 @@ import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
     kotlin("jvm") version "1.4-M1"
+    id("org.sonarqube") version "2.8"
+    id("io.gitlab.arturbosch.detekt") version "1.7.4"
 }
 
 group = "io.overfullstack"
@@ -19,20 +21,29 @@ dependencies {
     implementation(kotlin("stdlib-jdk8"))
     implementation("io.arrow-kt:arrow-core:$arrowSnapshotVersion")
     implementation("io.arrow-kt:arrow-fx:$arrowSnapshotVersion")
-}
+    implementation("io.github.microutils:kotlin-logging:+")
+    implementation("org.apache.logging.log4j:log4j-api:+")
+    implementation("org.apache.logging.log4j:log4j-core:+")
+    implementation("org.apache.logging.log4j:log4j-slf4j-impl:+")
 
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
+    testImplementation("org.junit.jupiter:junit-jupiter:+") {
+        exclude("junit", "junit")
+        exclude("org.junit.vintage", "junit-vintage-engine")
+    }
 }
 
 tasks.withType<KotlinCompile> {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_13.toString()
-        freeCompilerArgs = listOf("-Xjsr305=strict", "-Xjvm-default=enable") // These are related to Java Kotin interop
     }
 }
 
 tasks.withType<Test> {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
+}
+
+detekt {
+    baseline = file("${rootProject.projectDir}/config/baseline.xml")
+    config = files("config/detekt/detekt.yml")
+    buildUponDefaultConfig = true
 }
